<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    >
	<TextView android:textStyle="bold" android:layout_height="wrap_content" android:text="@string/period_label" android:id="@+id/period_label" android:layout_width="wrap_content">
    </TextView>
	<TextView android:text="@string/period_description" android:id="@+id/period_description" android:layout_width="wrap_content" android:layout_height="wrap_content"></TextView>
	<EditText android:id="@+id/period_edit" 
	android:layout_height="wrap_content" 
	android:text="@string/period_default_value" 
	android:layout_width="fill_parent">
	</EditText>
	<LinearLayout android:layout_height="wrap_content" android:id="@+id/linearLayout1" android:layout_width="fill_parent">
		<CheckBox android:layout_height="wrap_content" android:text="@string/outgoing_calls" android:id="@+id/out_calls" android:layout_width="wrap_content"></CheckBox>
		<CheckBox android:layout_height="wrap_content" android:text="@string/incoming_calls" android:id="@+id/incoming_calls" android:layout_width="wrap_content"></CheckBox>
	</LinearLayout>
	<Button android:text="@string/ok" 
	android:id="@+id/ok" 
	android:layout_width="wrap_content" 
	android:layout_height="wrap_content">
	</Button>
</LinearLayout>
